fix(products): fix alignment problem in product series

--- a/src/styles/product-card.scss
+++ b/src/styles/product-card.scss
@@ -1,9 +1,6 @@
 .product-card-container {
   width: 100%;
-  display: flex;
-  flex-direction: column;
   height: 350px;
-  align-items: center;
   position: relative;
 
   img {
@@ -17,7 +14,11 @@
     width: 80%;
     opacity: 0.7;
     position: absolute;
+    right: 50%;
+    left: 50%;
+    transform: translateX(-50%);
     top: 255px;
+    text-align: center;
     display: none;
   }
 
